2005-03-15 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* src/pic16/genutils.c (pic16_genCmp_special): initialized offs to
	prevent compiler warning

2005-03-14 Vangelis Rokas <vrokas AT users.sourceforge.net>

	* device/lib/pic16/startup/crt0i.c (_cinit): local variables where
	moved to level 0 and declared as static. Also they are explicit
	placed in access bank. This was necessery because some times they
	might cross memory bank boundaries. crt0iz.c is *NOT* updated!!!
	* src/pic16/device.h: added flag OPTIMIZE_CMP to enable some compare
	optimizations. Currently only compare to unsigned char is implemented,
	* src/pic16/gen.c: added fReturnIdx array,
	* (struct resolvedIfx) is moved to gen.h and made public,
	* (struct _G): added sregsAlloc and sregsAllocSet fields,
	* (aopForSym): added an optimization to directly store in stack of
	the operand of a SEND iCode,
	* (pic16_aopOp): don't return return registers as strings (AOP_STR)
	but as registers instead (AOP_REG) using the fReturnIdx array,
	* (pic16_freeAsmop): remove the freed register from the
	_G.sregsAlloc field,
	* (pic16_aopGet): in case AOP_STR, the compare to 'a' is changed to
	a compare of 'WREG',
	* (pic16_popGetTempRegCond): changed function prototype, now
	function takes also a bitVector argument v which holds the current
	set of registers that are allocated for stack access by aopForSym,
	registers allocated in aopForSym for accessing stack symbols are not
	any more part of the functions usedRegs field,
	* (genCall): some times aopOp is called for a stack variable to be
	send, aopForSym might perform the push, if this is true make sure
	that genCall doesn't push the variable twice by testing _G.resDirect,
	* (genFunction): changed testing for unspecified interrupt number
	from 256 to INTNO_UNSPEC,
	* modified selection scheme of frame pointer generation. Previously
	if function did use local registers a frame pointer was generated,